--- a/zijidxcx/pages/info/info.wxss
+++ b/zijidxcx/pages/info/info.wxss
@@ -69,7 +69,9 @@
   font-size: 14px;
   padding: 10rpx 0;
 }
-
+.tank image{
+  height: 100%;
+}
 .img image{
   width: 100%;
 }
@@ -113,4 +115,13 @@
 }
 .buy{
   background: rgba(255,69,0,.8);
+}
+
+.close{
+  position: relative;
+  width: 20rpx;
+  height: 20rpx;
+}
+.tantitle{
+  width: 90%;
 }
